--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
-baseURL = "https://workshop-sample.fcjuni.com/"
-relativeURLs = false
+baseURL = "https://tiendon.github.io/aws-worklog/"
+relativeURLs = true
 canonifyURLs = false
 defaultContentLanguage = "en"
 
