--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://tiendon.github.io/aws-worklog/"
-relativeURLs = true
-canonifyURLs = false
+relativeURLs = false  # Đặt lại là false
+canonifyURLs = true   # Đặt lại là true
 defaultContentLanguage = "en"
 
 # Change the default theme to be use when building the site with Hugo
